--- a/src/components/Favoritos/estilos.css
+++ b/src/components/Favoritos/estilos.css
@@ -1,9 +1,9 @@
 .favorite-button {
+  width: 30px;
+  height: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: auto;
-  height: auto;
   border: none;
   border-radius: 50%;
   cursor: pointer;
