foot y barra lat

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 :root {
-    --primary-color: rgba(171, 132, 94, 1);
+    --primary-color: rgba(238, 198, 142, 1);
+    --dorado-oscuro: rgba(171, 132, 94, 1);
     --color-negro-logo: rgba(28, 28, 28, 1);
 }
 
