--- a/src/components/Footbar/styles.css
+++ b/src/components/Footbar/styles.css
@@ -35,37 +35,34 @@ footer ul li {
     position: relative;
     width: 35%;
 }
-.info-contactos{
-    font-size: 18px;
-}
-/* color linea sup */
+/* color linea sup y titulo*/
 footer ul li h2 {
     display: block;
     margin-bottom: 3px;
+    font-size: 18px;
+    font-weight: 200;
+    color: var(--primary-color);
     border-bottom: 1px solid var(--primary-color);
 }
-footer ul li h4 p {
-    display: inline-block;
-    position: relative;
-    overflow: hidden;
-    font-size: .833vw;
-    line-height: .9vw;
-    text-transform: uppercase;
-    font-weight: 800;
-    vertical-align: middle;
-}
-/* color letras */
-footer ul li p {
-    display: block;
+/* textos contáctenos */
+.info-contactos{
+    margin: 3px 0 3px 0;
+    font-size: 17px;
+    font-weight: 200;
     color: var(--primary-color);
-    font-size: small;
+}
+.titulo-col-foot{
+    font-size: 15px;
+    font-weight: 200;
 }
 .divLinks{
     display: flex;
     flex-direction: column;
 }
-/* color par los Link */
+/* textos Link */
 .link-footbar{
+    font-size: 15px;
+    font-weight: 200;
     color: var(--primary-color);
 }
 .contTodasMedidas{
@@ -80,19 +77,19 @@ footer ul li p {
     margin-top: 10px;
     width: 100%; /* Ancho de la línea */
     height: 1px; /* Grosor de la línea */
-    background-color: var(--primary-color); /* Color de la línea */
-    
+    background-color: var(--primary-color); /* Color de la línea */    
     margin-bottom: 5px;
 }
 .icono-redes-foot{
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
 }
 .cont-info-derechos{
     width: 80%;
     border-top: 1px solid var(--primary-color);
 }
 .info-derechos{
+    font-size: 12px;
     color: var(--dorado-oscuro);
 }
 
