--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -1,14 +1,14 @@
 nav {
     /* position: fixed;
     top: 0;
-    left: 0; */
+    left: 0; */ /* si quiero nav fija */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 5rem;
-    /* z-index: 1; */
+    height: 80px;
+    /* z-index: 1000; */
 }
 /* cont nav Sup */
 .navSup{
