--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -13,15 +13,16 @@ nav {
 .cont-principal-nav{
     width: 90%;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 /* cont logo */
 .cont-logo{
-    width: 30%;
+    width: 20%;
     height: 80px;
     display: flex;
     justify-content: center;    
     align-items: center;
-    background-color: var(--color-negro-logo);
 }
 .logo{
     height: 3.5rem;
@@ -91,15 +92,7 @@ a, Link{
     color: var(--primary-color);
     text-decoration: none;
 }
-/* col 3 */
-.cont-menu-hambur{
-    width: 10%;
-    display: flex;
-    justify-content: space-between;    
-    align-items: center;
-} 
-
-/* menu hambur pantalla chica*/
+/* menú hamburg */
 .menu-icon span {
     width: 100%;
     height: 3px;
@@ -256,6 +249,13 @@ a, Link{
     /* texto nav inf */
     .ul-nav-inf > li {
         font-size: 15px;
+    }
+    /* menu P.chica lo debo declarar acá, no arriba*/
+    .cont-menu-hambur{
+        width: 10%;
+        display: flex;
+        justify-content: center;    
+        align-items: center;
     }
     .menu-icon {
         width: 30px;
