--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -172,6 +172,19 @@
         grid-template-rows: auto; /* Ajusta las filas según el contenido */
         margin: 0 auto 20px auto; /* Centra la card y ajusta el margen */
     }
+    .cont-precio-fav{
+        width: 100%;
+        height: 30px;
+    }
+    .precio{
+        margin-left: 10px;
+        font-size: 23px;
+        font-weight: 500;
+        color: var(--primary-color);
+    }
+    .div-info2{
+        margin-top: 3px;
+    }
 }
 
 
