--- a/src/pages/PropsVenta/estilos.css
+++ b/src/pages/PropsVenta/estilos.css
@@ -3,13 +3,15 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: cadetblue;
+    background-color: var(--color-gris);
 }
 .cont-filtros-listaProps{
     position: relative;
     top: -35px;
 }
-
+.cont-btn-filtros{
+    margin-top: 5px;
+}
 @media screen and (max-width:700px){
     .cont-filtros-listaProps{
         position: relative;
