--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -1,13 +1,13 @@
 nav {
-    /* position: fixed;
+    position: fixed;
     top: 0;
-    left: 0; */ /* si quiero nav fija */
+    left: 0; /* si quiero nav fija */
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 80px;
-    /* z-index: 1000; */
+    z-index: 1000;
     background-color: var(--color-negro-logo);
 }
 .cont-principal-nav{
