--- a/src/components/CardFavorito/estilos.css
+++ b/src/components/CardFavorito/estilos.css
@@ -26,6 +26,32 @@
     height: 100%;
     border-radius: 10px;
 }
+/* estilos msj detalle */
+.detail {
+    position: absolute;
+    top: 0px;
+    left: 50;
+    width: 100%;
+    height: 250px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 10px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+.detail.show {
+    display: flex;
+    opacity: 1;
+}
+.palabra-abre-detalle{
+    font-size: 25px;
+    font-weight: 200;
+}
+
 
 /* cont data */
 .cont-data-prop-fav{
@@ -33,8 +59,8 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: start;
+    align-items: start;
 }
 /* contenedores info  */
 .cont-titulo-card-fav,
@@ -46,6 +72,10 @@
     justify-content: start;
     align-items: center;
     margin: 0;
+    padding: 0;
+}
+.cont-titulo-card-fav{
+    height: 70px;
 }
 /* titulo */
 .p-titulo-card-fav{
@@ -57,7 +87,7 @@
 /* dirección */
 .cont-direcc-card-fav {
     justify-content: center;
-    margin: 5px 0 5px 0;
+    margin: 20px 0 20px 0;
 }
 .p-direcc-card-fav,
 .p-precio-card-fav {
