--- a/src/components/ListaFavoritos/estilos.css
+++ b/src/components/ListaFavoritos/estilos.css
@@ -1,6 +1,7 @@
 .cont-listaProps-fav{
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -10,4 +11,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 20px;
 }
