--- a/src/components/ListaFavoritos/estilos.css
+++ b/src/components/ListaFavoritos/estilos.css
@@ -1,15 +1,21 @@
 .cont-listaProps-fav{
-    width: 100%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.cont-card-listaFav{
+.titulo-lista-props-fav{
+    margin: 10px 0 10px 0;
+}
+.cont-card-lista-props{
     width: 90%;
-    height: 250px;
+    height: auto;
     display: flex;
+    flex-wrap: wrap; /* para el orden de las CARDS */
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
+}
+.cont-card-Fav-listaProps{
+    
 }
