--- a/src/pages/Favoritos/estilos.css
+++ b/src/pages/Favoritos/estilos.css
@@ -3,17 +3,10 @@
     top: 80px;
     width: 100%;
     min-height: 90vh;
-    display: flexbox;
-    flex-direction: column;
+    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;    
     margin-bottom: 80px;
     background-color: var(--color-gris);
-}
-@media screen and (max-width:500px){
-    .titulo-page-fav{
-        font-size: 15px;
-        text-align: center;
-    }
 }
