--- a/src/pages/PropsVenta/estilos.css
+++ b/src/pages/PropsVenta/estilos.css
@@ -22,8 +22,10 @@
 }
 
 @media screen and (max-width:700px){
-    .cont-filtros-listaProps{
-        position: relative;
-        top: 0;
+    .cont-filtros-listaProps-venta{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
