--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -39,9 +39,11 @@
 .cont-barraL {
   position: -webkit-sticky; /* Soporte para Safari */
   position: sticky;
-  top: 80px; /* Ajusta este valor según la altura de la navbar */
+  top: 50px; /* Ajusta este valor según la altura de la navbar */
   z-index: 100;
   align-self: flex-start; /* Para que la barra se mantenga alineada al principio */
+  margin-left: 5px;
+  margin-bottom: 20px;
 }
 .texto-somos{
   font-size: 30px;
