--- a/src/components/Barra-Lateral/estilos.css
+++ b/src/components/Barra-Lateral/estilos.css
@@ -12,7 +12,8 @@
 
 }
 /* est. 1er div */
-.cont-titulo-filtro {
+.cont-titulo-filtro,
+.cont-titulo-filtro-Sin-muestrVentaAlq {
   height: 30px;
   display: flex;
   justify-content: center;
@@ -20,7 +21,10 @@
   padding: 8px;
   border-radius: 10px 10px 0 0;
   border-bottom: 2px solid var(--primary-color);
-  margin-bottom: 10px;
+}
+/* si la vista es Venta/Alq/Alq Temp. */
+.cont-titulo-filtro-Sin-muestrVentaAlq{
+  margin-bottom: 5px;
 }
 .titulo-filtros {
   width: 100%;
@@ -35,7 +39,7 @@
 .opc-venta-alq{
   width: 250px;
   align-items: center;
-  margin: 20px 0px 20px 0px;
+  margin: 10px 0px 10px 0px;
 }
 .cont-venta-alq{
   width: 95%;
@@ -68,7 +72,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 }
 .boton-filtros {
   width: 130px;
