--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -32,18 +32,19 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-top: 100px;
+  align-items: center;
+  /* margin-top: 100px; */
   height: auto; /* Asegúrate de que este contenedor pueda crecer */
+  z-index: 100;
+  background-color: var(--color-gris);
 }
-/* barra lateral */
 .cont-barraL {
   position: -webkit-sticky; /* Soporte para Safari */
   position: sticky;
-  top: 50px; /* Ajusta este valor según la altura de la navbar */
-  z-index: 100;
-  align-self: flex-start; /* Para que la barra se mantenga alineada al principio */
+
   margin-left: 5px;
-  margin-bottom: 20px;
+  margin-bottom: 90px;
+  z-index: 100;
 }
 .texto-somos{
   font-size: 30px;
