--- a/src/components/Carrusel/styles.css
+++ b/src/components/Carrusel/styles.css
@@ -57,7 +57,7 @@
 /* modal */
 .modal-overlay {
     position: fixed;
-    top: 0;
+    top: 40px;
     left: 0;
     width: 100%;
     height: 100%;
@@ -69,8 +69,19 @@
 }
 
 /* responsive */
-@media screen and (max-width: 650px){
-    .img-carrusel{
+@media screen and (max-width: 650px) {
+    .img-carrusel {
         height: 300px;
+    }
+
+    /* modal */
+    .modal-overlay {
+        position: absolute;
+        width: 90%;
+        height: 90%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: red;
     }
 }
