--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     width: 85%;
-    height: 90%;
+    height: 100%;
 }
 .cont-btn-cierra-modal{
     width: 70px;
@@ -27,12 +27,11 @@
 /* responsive */
 @media screen and (max-width: 750px){
     .contModal{
+        display: flex;
+        justify-content: center;
+        align-items: start;
         width: 100%;
         height: 95vh;
     }
-    .imgProp{
-        width: 95%;
-        height: 65%;
-        margin: 0;
-    }
+    
 }
