--- a/src/components/Carrusel/styles.css
+++ b/src/components/Carrusel/styles.css
@@ -3,6 +3,7 @@
     height: auto;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     margin-top: 5px;
 }
@@ -58,30 +59,28 @@
 .modal-overlay {
     position: fixed;
     top: 40px;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    left: 70px;
+    width: 90%;
+    height: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.7);    
-    z-index: 2;
+    z-index: 1000;
 }
 
 /* responsive */
+
 @media screen and (max-width: 650px) {
     .img-carrusel {
         height: 300px;
     }
 
+    .tooltipImg{
+        display: none;
+    }
     /* modal */
     .modal-overlay {
-        position: absolute;
-        width: 90%;
-        height: 90%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: red;
+        display: none;
     }
 }
