--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -1,10 +1,14 @@
 .contModal{
+    width: 95%;
+    height: 400px;
+    position: absolute;
+    top: 0px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 85%;
-    height: 100%;
+    background-color: black;
+    z-index: 1000;
 }
 .cont-btn-cierra-modal{
     width: 70px;
@@ -13,6 +17,7 @@
     left: 0;
     z-index: 1;
 }
+
 .btn-close-modal{
     border-radius: 50%;
     border: none;
