--- a/src/components/Carrusel/styles.css
+++ b/src/components/Carrusel/styles.css
@@ -58,29 +58,42 @@
 /* modal */
 .modal-overlay {
     position: fixed;
-    top: 40px;
-    left: 70px;
-    width: 90%;
-    height: 90%;
+    top: 80px;
+    /* centrar eje x */
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.7);    
+    background-color: rgba(19, 19, 19, 0.7);    
     z-index: 1000;
 }
 
 /* responsive */
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 800px) {
     .img-carrusel {
         height: 300px;
     }
-
-    .tooltipImg{
-        display: none;
-    }
     /* modal */
     .modal-overlay {
-        display: none;
+        top: -20px;
+        left: 20px;
+        transform: translateX(0);
+        width: 95%;
+        height: 95%;
+    }
+}
+@media screen and (max-width: 400px) {
+    /* modal */
+    .modal-overlay {
+        top: 30px;
+        left: 10px;
+        transform: translateX(0);
+        width: 95%;
+        height: 95%;
+        background-color: black;
     }
 }
