--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -1,13 +1,12 @@
 .contModal{
-    width: 95%;
-    height: 400px;
+    width: 80%;
+    height: 90%;
     position: absolute;
     top: 0px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: black;
     z-index: 1000;
 }
 .cont-btn-cierra-modal{
@@ -17,7 +16,9 @@
     left: 0;
     z-index: 1;
 }
-
+.mesaj-pos-horizontal{
+    display: none;
+}
 .btn-close-modal{
     border-radius: 50%;
     border: none;
@@ -30,11 +31,15 @@
 }
 
 /* responsive */
-@media screen and (max-width: 750px){
+@media screen and (max-width: 800px){
+    .mesaj-pos-horizontal{
+        display: flex;
+        color: red;
+    }
     .contModal{
         display: flex;
         justify-content: center;
-        align-items: start;
+        align-items: center;
         width: 100%;
         height: 95vh;
     }
