--- a/src/components/Carrusel/styles.css
+++ b/src/components/Carrusel/styles.css
@@ -33,6 +33,7 @@
     width: 100%;
     height: 550px;
     border-radius: 10px;
+    margin-top: 20px;
 }
 .btn-carrusel-next{
     right: 10px;
@@ -55,19 +56,18 @@
     opacity: 0.9;
     transition: opacity 0.3s;
 }
-/* modal */
+/*contenedor modal */
 .modal-overlay {
     position: fixed;
+    display: flex;
+    justify-content: center;
     top: 80px;
     /* centrar eje x */
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(19, 19, 19, 0.7);    
+    background-color: black;    
     z-index: 1000;
 }
 
