--- a/src/components/CarruselModal/styles.css
+++ b/src/components/CarruselModal/styles.css
@@ -1,8 +1,9 @@
 .contGralCarruselM{
-    width: 100%;
-    height: 100%;
+    width: 751px;
+    height: 590px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 .cont-img-btns{
@@ -28,8 +29,8 @@
 }
 .img-carruselM{
     width: 100%;
-    max-height: 62%;
-    border-radius: 10px 10px 0 0;
+    max-height: 586px;
+    border-radius: 10px;
 }
 .btn-carrusel-next{
     right: 10px;
