--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -1,11 +1,9 @@
 .contModal{
     width: 80%;
     height: 90%;
-    position: absolute;
-    top: 0px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     z-index: 1000;
 }
