--- a/src/components/Carrusel/styles.css
+++ b/src/components/Carrusel/styles.css
@@ -74,26 +74,8 @@
 /* responsive */
 
 @media screen and (max-width: 800px) {
+    /* estilo para la imagen del carrusel en DETALLE */
     .img-carrusel {
         height: 300px;
-    }
-    /* modal */
-    .modal-overlay {
-        top: -20px;
-        left: 20px;
-        transform: translateX(0);
-        width: 95%;
-        height: 95%;
-    }
-}
-@media screen and (max-width: 400px) {
-    /* modal */
-    .modal-overlay {
-        top: 30px;
-        left: 10px;
-        transform: translateX(0);
-        width: 95%;
-        height: 95%;
-        background-color: black;
-    }
+    }    
 }
