--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -27,9 +27,33 @@
     cursor: pointer;
     font-size: 20px;
 }
-
+.cont-carrusel-modal{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 /* responsive */
-@media screen and (max-width: 800px){
+@media screen and (max-width: 800px) and (min-width: 671px){
+    .contModal{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 95vh;
+    }
+    .cont-btn-cierra-modal{
+        width: 70px;
+        position: fixed;
+        display: flex;
+        justify-content: center;
+        top: 0px;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 1;
+    }
+}
+@media screen and (max-width: 600px){
     .mesaj-pos-horizontal{
         display: flex;
         color: red;
@@ -40,6 +64,16 @@
         align-items: center;
         width: 100%;
         height: 95vh;
+    }
+    .cont-btn-cierra-modal{
+        width: 70px;
+        position: fixed;
+        display: flex;
+        justify-content: center;
+        top: 15px;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 1;
     }
     
 }
