--- a/src/pages/DetallePropiedad/estilos.css
+++ b/src/pages/DetallePropiedad/estilos.css
@@ -7,9 +7,6 @@
     justify-content: center;
     align-items: start; /* eje y */
     background: url('../../Imagenes/Texturas/Textura-02.jpg');
-    /* background-image: url('../../Imagenes/Mar-Del-Plata.webp'); */
-    /* background-size: cover; */ /* Hace que la imagen de fondo cubra todo el div */
-    /* background-position: center; */
     margin-bottom: 80px;
 }
 .cont-detail{
@@ -265,94 +262,43 @@
     background-color: var(--color-gris);
 }
 /* responsive */
-@media screen and (max-width: 1300px){
+
+@media screen and (max-width: 1100px){
     .info-1{
-        width: 92%;
+        width: 90%;
+        justify-content: center;
+        align-items: center;
+    }
+    .cont-titulo-detalle{
+        justify-content: center;
+        align-items: center;
+    }
+    .cont-imgs-info {
         height: auto;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-    }
-    .cont-titulo-detalle {
-        width: 99%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .cont-btns-direccion{
-        width: 95%;
-        display: flex;
-        justify-content: center;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .detalle-titulo-prop {
-        font-size: 25px;
-    }
-    .detalle-titulo-direccion {
-        font-size: 18px;   
-    }
-    .cont-imgs-info{
-        width: 100%;
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 0;
     }
     .cont-imagenes{
-        width: 90%;
-    }
-    .info-imagenes{
-        width: 70%;
-    }
-    .info-imagenes, .info-textos{
-        width: 70%;
-        margin-left: 0;
-        margin-top: 15px;
-    }
-    /* cont form */
-    .cont-form-contacto{
-        width: 60%;
+        width: 80%;
         height: auto;
-        margin-top: 20px;
-        margin-bottom: 20PX;
     }
-    /* cont descripción */
+    .cont-form-contacto{
+        width: 80%;
+        height: auto;
+    }
     .cont-titulo-descripcion-form{
+        height: auto;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 95%;
+        margin-top: 50px;
     }
     .cont-descrip{
-        width: 70%;
-        height: auto;
+        width: 80%;
         margin-bottom: 20px;
-    }
-    /* mapa */
-    .cont-map{
-    width: 70%;
-    height: 550px;
-    margin-top: 20px;
-    }
-}
-@media screen and (max-width: 960px){
-    .cont-info-titulo{
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-    }
-    .detalle-titulo-prop {
-        font-size: 22px;
-    }
-    .detalle-titulo-direccion {
-        font-size: 18px;   
     }
 }
 @media screen and (max-width: 750px){
@@ -503,5 +449,37 @@
     width: 90%;
     height: 550px;
     margin-top: 0px;
+    }
+}
+@media screen and (max-width: 450px) {
+    .detalle-titulo-prop{
+        font-size: 15px;
+    }
+    /* estilos seccion imagenes */
+    .cont-imgs-info{
+        width: 98%;
+        height: auto;
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+    .cont-imagenes{
+        width: 95%;
+        height: auto;
+        margin: 0;
+    }
+    .cont-form-contacto{
+        width: 98%;
+        height: auto;
+        margin-bottom: 20px;
+    }
+    /* cont descr  */
+    .cont-titulo-descripcion-form{
+        width: 98%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        margin-top: 20px;
     }
 }
