--- a/src/pages/PropsVenta/estilos.css
+++ b/src/pages/PropsVenta/estilos.css
@@ -67,6 +67,7 @@
         font-size: 25px;
         font-weight: 300;
         margin-top: 10px;
+        text-align: center;
     }
     .cont-barraLateral-venta{
         height: auto;
