--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -77,15 +77,13 @@ nav {
 }
 .ul-nav-inf{
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
 /* texto nav inf */
 .ul-nav-inf > li {
     list-style: none;
-    margin-right: 1.5rem;
-    font-size: 25px;
+    font-size: 24px;
     font-weight: 100;
+    margin-right: 10px;
 }
 /* quito line y cambio color etiqtas a y Link */
 a, Link{
@@ -163,7 +161,7 @@ a, Link{
     }
     
 }
-@media screen and (max-width: 971px) {
+@media screen and (max-width: 1100px) {
     .menu-icon {
         display: none;
     }
@@ -219,10 +217,6 @@ a, Link{
     }
     .texto-barra-sup{
         font-size: 13px;
-    }
-    /* texto nav inf */
-    .ul-nav-inf > li {
-        font-size: 15px;
     }
     /* menu P.chica lo debo declarar acá, no arriba*/
     .cont-menu-hambur{
